[tool.poetry]
name = "typer-101"
version = "0.1.0"
description = "This is a 101 project for studying typer"
authors = ["tmdgusya"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
